[package]
name = "rust-crawler"
version = "0.1.0"
authors = ["komori-n <ikamat.kmr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
anyhow = "1.0"
select = "0.5"
url = "2.2"
clap = "2.33"